--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
-  "name": "foundry-typescript-template",
-  "version": "1.0.0",
-  "description": "Foundry VTT Typescript Template",
+  "name": "structured-table-results",
+  "version": "0.0.1",
+  "description": "Nice editor for roll table results.",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build"
+    "build": "webpack --mode=production --node-env=production",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:test": "webpack --mode=development --node-env=test",
+    "watch": "webpack --watch",
+    "test": "cross-env NODE_ENV=test jasmine"
   },
-  "author": "",
+  "author": "tanglisha",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1"
+    "@babel/core": "^7.25.2",
+    "@babel/register": "^7.24.6",
+    "@league-of-foundry-developers/foundry-vtt-types": "^9.280.0",
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.5.4",
+    "@types/webpack": "^5.28.5",
+    "@webpack-cli/generators": "^3.0.7",
+    "autoprefixer": "^10.4.20",
+    "babel-preset-react-app": "^10.0.1",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
+    "declaration-bundler-webpack-plugin": "^1.0.3",
+    "jasmine": "^5.3.0",
+    "jsdom": "^25.0.0",
+    "postcss": "^8.4.45",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-copy-plugin": "^0.0.4",
+    "wepack-cli": "^0.0.1-security"
   },
   "dependencies": {
-    "@types/node": "^14.10.1",
-    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
-    "typescript": "^4.0.2"
+    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types"
   }
 }
