--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "compilerOptions": {
     "moduleResolution": "node",
+    "module": "CommonJS",
     "target": "ES6",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
     "types": ["foundry-pc-types", "node"],
-    "allowUmdGlobalAccess": true
+    "allowUmdGlobalAccess": true,
+    "strict": true,
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules"
+  ],
+  "include": [
+    "src/**/*", 
+    "spec/**/*"
   ]
 }
