--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "ES6",
-    "lib": ["DOM", "ES6", "ES2017", "ES2018"],
-    "types": ["foundry-pc-types", "node"],
-    "allowUmdGlobalAccess": true
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "module": "es6",
+    "target": "es5",
+    "allowJs": true,
+    "outDir": "dist",
+    "strict": true,
+    "esModuleInterop": true
   },
-  "files": ["./gulpfile.ts"],
-  "exclude": [
-    "node_modules"
-  ]
+  "files": ["src/esmodules/module.ts"],
+  "exclude": ["node_modules", "src/module.json"],
 }
