--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "foundry-typescript-template",
-  "version": "1.0.0",
-  "description": "Foundry VTT Typescript Template",
+  "name": "structured-table-results",
+  "version": "0.0.1",
+  "description": "Grapical editing and display roll table results",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build"
+    "build": "tsc --build",
+    "postbuild": "cpy module.json dist/",
+    "build:dev": "tsc --build  --clean",
+    "postbuild:dev": "cpy module.json dist/",
+    "watch": "tsc --watch",
+    "pretest": "npm run build:dev",
+    "test": "jasmine"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-typescript": "^6.0.0-alpha.1"
+    "@types/jasmine": "^5.1.4",
+    "@types/node": "^22.5.5",
+    "cpy-cli": "^5.0.0",
+    "jasmine": "^5.3.0",
+    "jasmine-ts": "^0.4.0",
+    "ts-node": "^10.9.2",
+    "tsc-hooks": "^1.1.2",
+    "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@types/node": "^14.10.1",
-    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
-    "typescript": "^4.0.2"
+    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types"
   }
 }
