--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,21 @@
 {
   "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "outFile": "./dist/esmodules/module.js",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "moduleResolution": "node",
     "target": "ES6",
     "lib": ["DOM", "ES6", "ES2017", "ES2018"],
-    "types": ["foundry-pc-types", "node"],
-    "allowUmdGlobalAccess": true
+    "types": ["foundry-pc-types", "node", "jasmine"],
+    "allowUmdGlobalAccess": true,
   },
-  "files": ["./gulpfile.ts"],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "watchOptions": {
+    "excludeDirectories": ["node_modules", "dist", ".github"],
+  }
 }
