--- a/package.json
+++ b/package.json
@@ -1,30 +1,43 @@
 {
-  "name": "structured-table-results",
-  "version": "0.0.1",
-  "description": "Grapical editing and display roll table results",
+  "name": "my-webpack-project",
+  "version": "1.0.0",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --build",
+    "build": "webpack --mode=production --node-env=production",
     "postbuild": "cpy module.json dist/",
-    "build:dev": "tsc --build  --clean",
+    "build:dev": "webpack --mode=development",
     "postbuild:dev": "cpy module.json dist/",
-    "watch": "tsc --watch",
+    "watch": "webpack --watch",
     "pretest": "npm run build:dev",
-    "test": "jasmine"
+    "test": "jasmine",
+    "build:prod": "webpack --mode=production --node-env=production"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
     "@types/jasmine": "^5.1.4",
     "@types/node": "^22.5.5",
+    "@webpack-cli/generators": "^3.0.7",
+    "autoprefixer": "^10.4.20",
+    "copy-webpack-plugin": "^12.0.2",
     "cpy-cli": "^5.0.0",
+    "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.0",
     "jasmine": "^5.3.0",
     "jasmine-ts": "^0.4.0",
+    "mini-css-extract-plugin": "^2.9.0",
+    "postcss": "^8.4.45",
+    "postcss-loader": "^8.1.1",
+    "prettier": "^3.3.3",
+    "style-loader": "^4.0.0",
+    "tanglisha": "github:league-of-foundry-developers/foundry-vtt-types#v12/main",
+    "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsc-hooks": "^1.1.2",
-    "typescript": "^5.6.2"
-  },
-  "dependencies": {
-    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types"
+    "typescript": "^5.6.2",
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4",
+    "workbox-webpack-plugin": "^7.1.0"
   }
 }
