--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,14 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
-    "outDir": "./dist",
-    "outFile": "./dist/esmodules/module.js",
-    "strict": true,
+    "allowSyntheticDefaultImports": true,
+    "noImplicitAny": true,
+    "module": "Node16",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
-    "skipLibCheck": true,
-    "moduleResolution": "node",
-    "target": "ES6",
-    "lib": ["DOM", "ES6", "ES2017", "ES2018"],
-    "types": ["foundry-pc-types", "node", "jasmine"],
-    "allowUmdGlobalAccess": true,
+    "strictNullChecks": true,
+    "target": "es5",
+    "allowJs": true,
+    "types": ["tanglisha"]
   },
-  "exclude": [
-    "node_modules"
-  ],
-  "watchOptions": {
-    "excludeDirectories": ["node_modules", "dist", ".github"],
-  }
+  "files": ["src/esmodules/module.ts"]
 }
