--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build:dev": "webpack --mode=development",
     "postbuild:dev": "cpy module.json dist/",
     "watch": "webpack --watch",
-    "pretest": "npm run build:dev",
-    "test": "jasmine",
+    "test": "karma start",
     "build:prod": "webpack --mode=production --node-env=production"
   },
   "author": "",
@@ -26,6 +25,11 @@
     "html-webpack-plugin": "^5.6.0",
     "jasmine": "^5.3.0",
     "jasmine-ts": "^0.4.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-webpack": "^5.0.1",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.45",
     "postcss-loader": "^8.1.1",
@@ -38,6 +42,6 @@
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "workbox-webpack-plugin": "^7.1.0"
+    "workbox-webpack-plugin": "^4.3.1"
   }
 }
