--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "build:dev": "webpack --mode=development",
     "postbuild:dev": "cpy module.json dist/",
     "watch": "webpack --watch",
-    "test": "karma start",
+    "test": "NODE_ENV=test karma start",
     "build:prod": "webpack --mode=production --node-env=production"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@types/jasmine": "^5.1.4",
+    "@league-of-foundry-developers/foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#v12/main",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.20",
@@ -23,25 +24,27 @@
     "cpy-cli": "^5.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
-    "jasmine": "^5.3.0",
-    "jasmine-ts": "^0.4.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-jasmine": "^5.1.0",
     "karma-sourcemap-loader": "^0.4.0",
+    "karma-typescript": "^5.5.4",
     "karma-webpack": "^5.0.1",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.45",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
     "style-loader": "^4.0.0",
-    "tanglisha": "github:league-of-foundry-developers/foundry-vtt-types#v12/main",
+    "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsc-hooks": "^1.1.2",
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^7.1.0"
+  },
+  "jest": {
+    "verbose": true
   }
 }
