--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "webpack --mode=development",
     "postbuild:dev": "cpy module.json dist/",
     "watch": "webpack --watch",
-    "test": "NODE_ENV=test karma start",
+    "test": "NODE_ENV=test jest",
     "build:prod": "webpack --mode=production --node-env=production"
   },
   "author": "",
@@ -24,12 +24,6 @@
     "cpy-cli": "^5.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.0",
-    "karma": "^6.4.4",
-    "karma-chrome-launcher": "^3.2.0",
-    "karma-jasmine": "^5.1.0",
-    "karma-sourcemap-loader": "^0.4.0",
-    "karma-typescript": "^5.5.4",
-    "karma-webpack": "^5.0.1",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.45",
     "postcss-loader": "^8.1.1",
@@ -45,6 +39,19 @@
     "workbox-webpack-plugin": "^7.1.0"
   },
   "jest": {
-    "verbose": true
+    "preset": "ts-jest",
+    "rootDir": "./",
+    "modulePaths": [
+      "<rootDir>/src"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": [
+        "ts-jest",
+        {}
+      ]
+    },
+    "testEnvironment": "node",
+    "verbose": true,
+    "bail": true
   }
 }
