--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "my-webpack-project",
   "version": "1.0.0",
   "description": "My webpack project",
-  "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production --node-env=production",
     "postbuild": "cpy module.json dist/",
@@ -12,14 +11,28 @@
     "test": "NODE_ENV=test jest",
     "build:prod": "webpack --mode=production --node-env=production"
   },
-  "author": "",
+  "author": "tanglisha",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/esmodules/module.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tanglisha/structured-table-results.git"
+  },
   "devDependencies": {
+    "@babel/plugin-transform-typescript": "^7.25.2",
+    "@jest/globals": "^29.7.0",
     "@league-of-foundry-developers/foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#v12/main",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.5.5",
+    "@types/sinon": "^17.0.3",
     "@webpack-cli/generators": "^3.0.7",
     "autoprefixer": "^10.4.20",
+    "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "cpy-cli": "^5.0.0",
     "css-loader": "^7.1.2",
@@ -28,6 +41,7 @@
     "postcss": "^8.4.45",
     "postcss-loader": "^8.1.1",
     "prettier": "^3.3.3",
+    "sinon": "^19.0.2",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
@@ -36,22 +50,7 @@
     "typescript": "^5.6.2",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
+    "webpack-remove-empty-scripts": "^1.0.4",
     "workbox-webpack-plugin": "^7.1.0"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "rootDir": "./",
-    "modulePaths": [
-      "<rootDir>/src"
-    ],
-    "transform": {
-      "^.+\\.tsx?$": [
-        "ts-jest",
-        {}
-      ]
-    },
-    "testEnvironment": "node",
-    "verbose": true,
-    "bail": true
   }
 }
