--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postbuild": "cpy module.json dist/",
     "build:dev": "webpack --mode=development",
     "postbuild:dev": "cpy module.json dist/",
-    "watch": "webpack --watch",
+    "watch": "webpack --mode=development --watch",
     "test": "NODE_ENV=test jest",
     "build:prod": "webpack --mode=production --node-env=production"
   },
@@ -23,7 +23,6 @@
   },
   "devDependencies": {
     "@babel/plugin-transform-typescript": "^7.25.2",
-    "@jest/globals": "^29.7.0",
     "@league-of-foundry-developers/foundry-vtt-types": "github:League-of-Foundry-Developers/foundry-vtt-types#v12/main",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
@@ -36,7 +35,9 @@
     "copy-webpack-plugin": "^12.0.2",
     "cpy-cli": "^5.0.0",
     "css-loader": "^7.1.2",
+    "foundryvtt": "file:../../foundryvtt/resources/app",
     "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.45",
     "postcss-loader": "^8.1.1",
