--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,18 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "rootDir": "src",
     "outDir": "dist",
     "removeComments": true,
-    "declaration": true,
+    "declaration": false,
     "strict": true,
     "noImplicitReturns": true,
     "inlineSources": true,
     "target": "ES2022",
     "lib": ["DOM", "ES2022"],
-    "types": [
-      "foundry-vtt-types",
-      "node",
-    ],
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "module": "ES2022",
     "moduleResolution": "Node",
     "skipLibCheck": true,
@@ -25,9 +24,12 @@
     ]
   },
   "compileOnSave": true,
-  "include": ["./src/**/*.ts"],
+  "include": [
+    "src" 
+  ],
   "exclude": [
     "node_modules",
-    "jest.config.ts"
-  ]
+    "jest.config.ts",
+    "**/*.test.ts",
+    ]
 }
