--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
+    - uses: actions/setup-node@v4
 
     # Get the version from 'module.json'
     - name: Get Version
@@ -22,6 +23,10 @@ jobs:
       shell: bash
       id: get-includes
       run: echo "::set-output name=files::$(node ./.github/workflows/get-includes.js)"
+
+    # Run the build
+    - name: Build
+      run: npm install && npm run build
 
     # create a zip file with all files required by the module to add to the release
     - name: Zip Files
