--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
 
     # create a zip file with all files required by the module to add to the release
     - name: Zip Files
-      working-directory: dist 
+      working-directory: ./dist 
       run: zip -r ../module.zip ${{steps.get-includes.outputs.files}}
 
     # Useful only for the template so we can leave the manifest and download urls empty
