--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,12 +22,17 @@ jobs:
         file: ./module.json
         fields: "{\"version\": \"${{ github.ref_name }}\"}"
 
-    # # Get the name from 'module.json'
-    # - name: Get Includes
-    #   shell: bash
-    #   id: get-includes
-    #   run: echo "::set-output name=files::$(node ./.github/workflows/get-includes.js)"
-
+    # Substitute the Manifest and Download URLs in the module.json
+    - name: Substitute Manifest and Download Links For Versioned Ones
+      id: sub_manifest_link_version
+      uses: microsoft/variable-substitution@v1
+      with:
+        files: './module.json'
+      env:
+        url: https://github.com/${{github.repository}}
+        manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
+        download: https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip
+    
     # Run the build
     - name: Build
       run: npm install && npm run build
@@ -35,18 +40,11 @@ jobs:
     # create a zip file with all files required by the module to add to the release
     - name: Zip Files
       working-directory: ./dist 
-      run: zip -r 'module.zip' module.zip .
+      run: zip -r module .
 
-    # Useful only for the template so we can leave the manifest and download urls empty
-    - name: Substitute Manifest and Download Links For Versioned Ones
-      id: sub_manifest_link_latest
-      uses: microsoft/variable-substitution@v1
-      with:
-        files: './dist/module.json'
-      env:
-        url: https://github.com/${{github.repository}}
-        manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-        download: https://github.com/${{github.repository}}/releases/latest/download/module.zip
+    - name: view all files
+      shell: bash
+      run: ls -lahR
 
     # Update the 'latest' release
     - name: Update Latest Release
@@ -60,17 +58,6 @@ jobs:
         artifacts: './dist/module.json, ./module.zip'
         tag: latest
 
-    # Substitute the Manifest and Download URLs in the module.json
-    - name: Substitute Manifest and Download Links For Versioned Ones
-      id: sub_manifest_link_version
-      uses: microsoft/variable-substitution@v1
-      with:
-        files: './dist/module.json'
-      env:
-        url: https://github.com/${{github.repository}}
-        manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-        download: https://github.com/${{github.repository}}/releases/download/${{steps.get-version.outputs.version}}/module.zip
-    
     # Create a release for this specific version
     - name: Create Version Release
       id: create_version_release
