--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
     tags:
       - '\d+\.\d+\.\d+' # If we tag a release with v0.0.whatever, create a release
 
+permissions:
+  id-token: write
+  contents: read
+  attestations: write
+
 jobs: 
   build:
     runs-on: ubuntu-latest
@@ -41,6 +46,19 @@ jobs:
     - name: Zip Files
       working-directory: ./dist 
       run: zip -r module .
+
+    # attest the build
+    - name: Generate artifact attestation
+      uses: actions/attest-build-provenance@v1
+      with:
+        subject-path: './dist/module.zip'
+    
+    # attest the module definition
+    - name: Generate artifact attestation
+      uses: actions/attest-build-provenance@v1
+      with:
+        subject-path: './dist/module.json'
+    
 
     # Update the 'latest' release
     - name: Update Latest Release
