--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - '\d+\.\d+\.\d+' # If we tag a release with v0.0.whatever, create a release
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 permissions:
   id-token: write
   contents: read
@@ -20,13 +23,6 @@ jobs:
     
     - uses: actions/setup-node@v4
 
-    # Update the version in module.json
-    - name: Update version in module.json
-      uses: restackio/update-json-file-action@2.1
-      with: 
-        file: ./module.json
-        fields: "{\"version\": \"${{ github.ref_name }}\"}"
-
     # Substitute the Manifest and Download URLs in the module.json
     - name: Substitute Manifest and Download Links For Versioned Ones
       id: sub_manifest_link_version
@@ -38,6 +34,13 @@ jobs:
         manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
         download: https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip
     
+    # Update the version in module.json
+    - name: Update version in module.json
+      uses: restackio/update-json-file-action@2.1
+      with: 
+        file: ./module.json
+        fields: "{\"version\": \"${{ github.ref_name }}\", \"manifest\": \"${{ steps.sub_manifest_link_version.outputs.manifest }}\", \"download\": \"${{ steps.sub_manifest_link_version.outputs.download }}\"}"
+
     # Run the build
     - name: Build
       run: npm install && npm run build
