--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,22 +24,27 @@ jobs:
     - uses: actions/setup-node@v4
 
     # Substitute the Manifest and Download URLs in the module.json
-    - name: Substitute Manifest and Download Links For Versioned Ones
-      id: sub_manifest_link_version
-      uses: microsoft/variable-substitution@v1
-      with:
-        files: './module.json'
-      env:
-        url: https://github.com/${{github.repository}}
-        manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-        download: https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip
+    # - name: Substitute Manifest and Download Links For Versioned Ones
+    #   id: sub_manifest_link_version
+    #   uses: microsoft/variable-substitution@v1
+    #   with:
+    #     files: './module.json'
+    #   env:
+    #     url: https://github.com/${{github.repository}}
+    #     manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
+    #     download: https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip
     
     # Update the version in module.json
     - name: Update version in module.json
       uses: restackio/update-json-file-action@2.1
       with: 
         file: ./module.json
-        fields: "{\"version\": \"${{ github.ref_name }}\", \"manifest\": \"${{ steps.sub_manifest_link_version.outputs.manifest }}\", \"download\": \"${{ steps.sub_manifest_link_version.outputs.download }}\"}"
+        fields: >
+          {
+            "version": "${{ github.ref_name }}", 
+            "manifest": "https://github.com/${{github.repository}}/releases/latest/download/module.json", 
+            "download": "https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip"
+          }
 
     # Run the build
     - name: Build
