--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           {
             "version": "${{ github.ref_name }}", 
             "manifest": "https://github.com/${{github.repository}}/releases/latest/download/module.json", 
-            "download": "https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip"
+            "download": "https://github.com/${{github.repository}}/releases/${{ github.ref_name}}/download/module.zip"
           }
 
     # Run the build
