--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Module CI/CD
 on: 
   push:
     tags:
-      - '\d+\.\d+\.\d+' # If we tag a release with v0.0.whatever, create a release
+      - '\d+\.\d+\.\d+' # If we tag a push with 0.0.0, create a release
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -23,17 +23,6 @@ jobs:
     
     - uses: actions/setup-node@v4
 
-    # Substitute the Manifest and Download URLs in the module.json
-    # - name: Substitute Manifest and Download Links For Versioned Ones
-    #   id: sub_manifest_link_version
-    #   uses: microsoft/variable-substitution@v1
-    #   with:
-    #     files: './module.json'
-    #   env:
-    #     url: https://github.com/${{github.repository}}
-    #     manifest: https://github.com/${{github.repository}}/releases/latest/download/module.json
-    #     download: https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip
-    
     # Update the version in module.json
     - name: Update version in module.json
       uses: restackio/update-json-file-action@2.1
@@ -43,7 +32,7 @@ jobs:
           {
             "version": "${{ github.ref_name }}", 
             "manifest": "https://github.com/${{github.repository}}/releases/latest/download/module.json", 
-            "download": "https://github.com/${{github.repository}}/releases/${{ github.ref_name}}/download/module.zip"
+            "download": "https://github.com/${{github.repository}}/releases/download/${{ github.ref_name}}/module.zip"
           }
 
     # Run the build
