html button not in header

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-webpack-project",
+  "name": "format-rolltable-results",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "Format RollTable Results",
   "scripts": {
     "build": "webpack --mode=production --node-env=production",
     "postbuild": "cpy module.json dist/",
