fix off by one error

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "removeComments": true,
-    "declaration": false,
+    "declaration": true,
     "strict": true,
     "noImplicitReturns": true,
     "inlineSources": true,
